# totalrecall

./: .gitignore  CLAUDE.md  Cargo.toml  PROG.md  README.md  SPEC.md  STATUS.md  SUMMARY.md  ZED_INTEGRATION.md  build.sh  extension.wasm  memo.md  zed_plugins.md
.github/workflows/: release.yml
crates/rag-chunking/: Cargo.toml
crates/rag-chunking/src/: lib.rs
crates/rag-core/: Cargo.toml
crates/rag-core/src/: config.rs  lib.rs  storage.rs  storage_old.rs
crates/rag-embedding/: Cargo.toml
crates/rag-embedding/src/: lib.rs
crates/rag-mcp-server/: Cargo.toml
crates/rag-mcp-server/src/: main.rs  mcp.rs  server.rs
crates/rag-mcp-server/tests/: mcp_integration.rs
crates/rag-search/: Cargo.toml
crates/rag-search/src/: lib.rs
design/: CLAUDE_CODE_SETUP.md  DEPLOYMENT_GUIDE.md  INTEGRATION_SUMMARY.md  PUBLISHING.md  TESTING_CHECKLIST.md  ZED_EXTENSION_RESEARCH.md
zed-extension/: Cargo.toml  README.md  extension.toml  extension.wasm
zed-extension/src/: lib.rs
