[workspace]
members = [
    "crates/rag-mcp-server",
    "crates/rag-core",
    "crates/rag-embedding",
    "crates/rag-chunking",
    "crates/rag-search",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/totalrecall"

[workspace.dependencies]
# Storage
sahomedb = "0.4.0"
sled = "0.34"

# Embeddings & ML
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.19"

# AST Parsing
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-md = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Async Runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# CLI & Logging
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
notify = "6.1"

# MCP Protocol
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
