[workspace]
members = [
    "crates/rag-mcp-server",
    "crates/rag-core",
    "crates/rag-search",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/totalrecall"

[workspace.dependencies]
# Storage
sled = "0.34"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Async Runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# CLI & Logging
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"

# MCP Protocol
async-trait = "0.1"

# Text processing
regex = "1.10"
unicode-segmentation = "1.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
