[package]
name = "rag-embedding"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
tokenizers.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
