[package]
name = "rag-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rag-mcp"
path = "src/main.rs"

[dependencies]
rag-core = { path = "../rag-core" }
rag-embedding = { path = "../rag-embedding" }
rag-chunking = { path = "../rag-chunking" }
rag-search = { path = "../rag-search" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
notify.workspace = true
async-trait.workspace = true
